2007-05-26  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLLinkTypesAttrChecker): New checker.
	(link/@rel, a/@rel, area/@rel): Use new checker.

	* Makefile (_LinkTypeList.pm, RelExtensions.html): New rules.

	* _LinkTypeList.pm: New file.

	* mklinktypelist.pl: New file.

	* .cvsignore: |RelExtensions.html| added.

	* NanoDOM.pm (child_nodes): Returns an empty array
	for non-child-containing node types.
	(text_content): New attribute.

2007-05-26  Wakaba  <wakaba@suika.fam.cx>

	* IMTChecker.pm: New module.

	* ContentChecker.pm ($HTMLIMTAttrChecker): Call IMTChecker
	to test parameter value validity.

	* HTML.pm.src ($style_start_tag): Attributes were
	discarded.

2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLURIAttrChecker): Implemented.

2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm: All recommendations from RFC 3986
	and RFC 3987 are listed (not all testable items are checked yet).

2007-05-25  Wakaba  <wakaba@suika.fam.cx>

	* URIChecker.pm: New module.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Now most attributes are implemented
	or associated to some placeholder.
	($ElementDefault): Warn unknown attributes
	for unknown elements as "attribute not supported".
	($HTMLLanguageTagAttrChecker, $HTMLMQAttrChecker): New placeholders.
	($HTMLUsemapAttrChecker, $HTMLTargetAttrChecker): New checkers.
	(|a| attribute checker): Reimplemented.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLEventHandlerAttrChecker): New placeholder.
	($HTMLAttrChecker): Event handler content attributes
	are added.
	(link, embed): Required attribute is now checked.
	(embed): Unknown local attributes are no longer warned.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLSpaceURIsAttrChecker): New placeholder.
	($HTMLIMTAttrChecker): New checker.
	(link@rel, link@href, link@type, style@type, 
	a@href, a@ping, a@ping, a@type, embed@src, embed@type,