@@ -1,3 +1,11 @@
+2007-05-27  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTMLTable.pm: New module.
+
+	* ContentChecker.pm (table): Invoke table model error checker.
+
+	* NanoDOM.pm (first_child, get_attribute_ns): New.
+
 2007-05-26  Wakaba  <wakaba@suika.fam.cx>
 
 	* ContentChecker.pm ($HTMLLinkTypesAttrChecker): New checker.
